--- a/css/main.scss
+++ b/css/main.scss
@@ -37,4 +37,5 @@ $phones: 480px;
         "blocks/team.scss",
         "blocks/modal.scss",
         "blocks/consist.scss",
+        "blocks/how.scss",
         "blocks/hamburger-menu.scss";
