--- a/css/blocks/common/fixed-menu.scss
+++ b/css/blocks/common/fixed-menu.scss
@@ -17,7 +17,7 @@
   &:last-child {
     margin-bottom: 0;
   }
-  &_active {
+  &.active {
     .fixed-menu__link {
       border-color: #fff;
     }
