--- a/css/_misc/layout.scss
+++ b/css/_misc/layout.scss
@@ -27,7 +27,13 @@ body {
 .wrapper {
   overflow: hidden;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+}
+
+.maincontent {
+  height: 100%;
+  transition: transform 1s;
+  will-change: transform;
 }
 
 .container {
