--- a/css/blocks/video-player.scss
+++ b/css/blocks/video-player.scss
@@ -27,7 +27,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('../images/player_bg.png') center center / cover no-repeat;
+  background: url('../images/player_bg.png') center center / cover no-repeat,
+              url('../images/play_white.png') center center / 50px no-repeat;
   cursor: pointer;
 }
 
@@ -58,6 +59,7 @@
   top: 5px;
   left: 20px;
   outline: none;
+  cursor: pointer;
   &.paused {
     width: 14px;
     height: 22px;
@@ -88,6 +90,7 @@
   background: #626262;
   top: 15px;
   left: 50px;
+  cursor: pointer;
 }
 
 .player__playback-button {
@@ -101,6 +104,7 @@
   top: -4px;
   transform: translateX(-50%);
   left: 0;
+  cursor: pointer;
 }
 
 .player__duration {
@@ -116,7 +120,7 @@
   align-items: center;
   position: absolute;
   top: 2px;
-  right: -25px;
+  right: 107px;
 }
 
 .sound__mic {
@@ -127,10 +131,46 @@
 }
 
 .sound__volume {
-  margin-left: 10px;
+  display: none;
+  position: absolute;
+  transform: rotate(90deg);
+  bottom: 25px;
+  right: 70px;
+
+  &.opened {
+    display: block;
+  }
 
   @include phones {
     position: absolute;
     top: 0;
   }
+}
+
+.duration__length {
+  width: 100%;
+  height: 4px;
+  border-radius: 1px;
+  background-color: #626262;
+  -webkit-appearance: none;/*Override default CSS styles*/
+  appearance: none;
+  outline: none;
+  margin-left: 2rem;
+}
+
+.duration__length--other{
+  width: 58px;
+  height: 4px;
+  margin-left: 0;
+}
+
+.duration__length::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  /* Override default look */
+  appearance: none;
+  background: #626262;
+  cursor: pointer;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
 }
