--- a/docs/css/_misc/layout.scss
+++ b/docs/css/_misc/layout.scss
@@ -27,7 +27,13 @@ body {
 .wrapper {
   overflow: hidden;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+}
+
+.maincontent {
+  height: 100%;
+  transition: transform 1s;
+  will-change: transform;
 }
 
 .container {
@@ -42,8 +48,9 @@ body {
 }
 
 .section {
-  height: 100vh;
-  // min-height: 650px;
+  // height: 100vh;
+  height: 100%;
+
 
   &_centered {
     .section-title {
