--- a/css/blocks/video-player.scss
+++ b/css/blocks/video-player.scss
@@ -13,6 +13,8 @@
 .player {
   position: relative;
   display: inline-block;
+  width: 70.3%;
+  min-height: 49.4%;
 
   &.hidden {
     opacity: 0;
@@ -32,6 +34,9 @@
 }
 
 .player__wrapper {
+  width: 100%;
+  height: 100%;
+
   &.active .player__splash {
     display: none;
   }
@@ -41,6 +46,7 @@
 }
 
 .player__controls {
+  width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -97,8 +103,8 @@
 
 .player__playback {
   position: absolute;
-  height: 4px;
-  width: 446px;
+  height: 11.44%;
+  width: 67.495%;
   background: #626262;
   top: 15px;
   left: 50px;
@@ -127,7 +133,7 @@
   height: 12px;
   padding: 0;
   position: absolute;
-  top: 15px;
+  top: 2px;
   transform: translateY(-50%);
   left: 0;
   cursor: pointer;
@@ -142,6 +148,7 @@
 }
 
 .player__sound {
+  width: 5%;
   display: flex;
   align-items: center;
   position: absolute;
@@ -160,8 +167,9 @@
   display: none;
   position: absolute;
   transform: rotate(90deg);
-  bottom: 25px;
-  right: 70px;
+  bottom: 30px;
+  right: 75px;
+  cursor: pointer;
 
   &.opened {
     display: block;
@@ -190,12 +198,6 @@
   margin-left: 0;
 }
 
-.duration__length::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  background: #626262;
-  cursor: pointer;
-  width: 13px;
-  height: 13px;
-  border-radius: 50%;
+#yt-player {
+  width: 100%;
 }
