--- a/docs/css/_misc/media.scss
+++ b/docs/css/_misc/media.scss
@@ -31,3 +31,9 @@
     @content;
   }
 }
+
+@mixin howWeWork { // for .player__diration
+  @media screen and (max-width: 600px) {
+    @content;
+  }
+}
