--- a/docs/css/blocks/video-player.scss
+++ b/docs/css/blocks/video-player.scss
@@ -146,7 +146,7 @@
   position: absolute;
   top: 2px;
   transform: translateY(-50%);
-  left: 0;
+  left: 50px;
   cursor: pointer;
 
   &.opened {
