commit bg video

--- a/docs/css/blocks/video-player.scss
+++ b/docs/css/blocks/video-player.scss
@@ -1,5 +1,5 @@
 .video {
-  background: url('/images/video_bg.png') center center no-repeat;
+  background: url('../images/video_bg.png') center center no-repeat;
   background-size: cover;
 
   &__container {
